# AERSP424HW02

./: CMakeLists.txt  HW2_Visualizer.cpp  README.md  main.cpp
include/: ATC.hpp  GeneralAviation.hpp  HW2_Visualizer.hpp  Plane.hpp
include/TrafficControl/: ATC.hpp  Airliner.hpp  Plane.hpp
include/Visualization/: HW2_Visualizer.hpp
src/: CMakeLists.txt  HW2_Visualizer.cpp  main.cpp
tests/: CMakeLists.txt  Question5.cpp  Question7.cpp
